workflows/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflows
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: workflows
  template:
    metadata:
      labels:
        app: workflows
    spec:
      containers:
        - name: workflows
          image: ghcr.io/n8n-io/n8n:latest
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: persistent
            - mountPath: /hooks
              name: hooks
      volumes:
        - name: persistent
          persistentVolumeClaim:
            claimName: workflows-pvc
        - name: hooks
          persistentVolumeClaim:
            claimName: workflows-hooks-pvc
